umap/static/umap/map.css
/* ... */
.umap-edit-tilelayers li div {
    background-color: rgb(116, 116, 116);
    bottom: 0;
    color: rgb(247, 246, 241);
    height: 56px;
    line-height: 56px;
    opacity: 0.9;
    padding-inline-start: 10px;
    position: absolute;
    width: 100%;
    text-align: center;
}

.umap-edit-tilelayers li:hover div:before,
.umap-edit-tilelayers .selected div:before {
    content: "✓";
    font-size: 1.3em;
    line-height: 56px;
    padding-inline-end: 7px;
    position: absolute;
    inset-inline-start: 7px;
}

.umap-edit-tilelayers li img {
    display: block;
    max-width: 100%;
}

/* ********************************* */
/*            Caption                */
/* ********************************* */
.datalayer-color {
    display: inline-block;
    width: 16px;
    height: 16px;
    margin-inline-end: 10px;
    border: 1px solid #000;
    background-color: transparent;
    vertical-align: middle;
}

.caption-item {
    color: #555;
    padding: 6px 8px;
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
    border-radius: 1px;
}

.caption-item ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.caption-item .circles-layer-legend {
    padding: var(--box-padding);
}

.circles-layer-legend li {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.circles-layer-legend li .circle {
    border-radius: 50%;
    display: inline-block;
    text-align: center;
}

.rules-caption .color-box {
    width: 24px;
    height: 24px;
    line-height: 24px;
    display: inline-block;
    margin-right: var(--text-margin);
    vertical-align: middle;
    text-align: center;
}

.rules-caption .color-box img {
    vertical-align: middle;
}

/* ************* */
/* Marker's Icon */
/* ************* */
.umap-div-icon .icon-container {
    background-color: white;
    border-radius: 4px 4px 4px 4px;
    height: 32px;
    width: 32px;
    box-shadow: 7px 10px 8px -5px black;
    opacity: 0.9;
    background-color: #2470b5;
    text-align: center;
    line-height: 32px;
}

.umap-div-icon.umap-icon-active .icon-container {
    border-radius: 5px;
    box-shadow: 7px 10px 10px -1px black;
    height: 36px;
    line-height: 36px;
    margin-inline-start: -2px;
    margin-top: -4px;
    opacity: 1.0 !important;
    width: 36px;
}

.umap-div-icon .icon-container img {
    vertical-align: middle;
    max-width: 24px !important;
    /* leaflet.css has !important, so... */
    max-height: 24px !important;
}

.umap-div-icon .icon-arrow {
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    border-top: 8px solid #2270b5;
    height: 0;
    inset-inline-start: 8px;
    position: relative;
    width: 0;
    opacity: 0.9;
}

.umap-div-icon.umap-icon-active .icon-arrow {
    opacity: 1.0 !important;
}

.umap-drop-icon .icon-arrow {
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    border-top: 16px solid #2270B5;
    height: 0;
    inset-inline-start: 6px;
    position: relative;
    top: -4px;
    width: 0;
}

.umap-drop-icon.umap-icon-active .icon-arrow {
    border-left-width: 12px;
    border-right-width: 12px;
    border-top-width: 18px;
    inset-inline-start: 4px;
    opacity: 1.0 !important;
}

.umap-drop-icon .icon-container {
    background-color: #2470B5;
    border-radius: 16px 16px 16px 16px;
    box-shadow: 6px 13px 8px -4px black;
    height: 32px;
    line-height: 32px;
    opacity: 0.9;
    text-align: center;
    width: 32px;
}

.umap-drop-icon.umap-icon-active .icon-container {
    box-shadow: 4px 11px 10px -2px black;
    border-radius: 18px 18px 18px 18px;
    height: 36px;
    line-height: 36px;
    margin-inline-start: -2px;
    margin-top: -6px;
    opacity: 1.0 !important;
    width: 36px;
}

.umap-drop-icon .icon-container img {
    vertical-align: middle;
    max-width: 24px !important;
    max-height: 24px !important;
}

.umap-div-icon .icon-container span,
.umap-drop-icon .icon-container span {
    vertical-align: middle;
    font-weight: bold;
}

.umap-circle-icon {
    border: 2px solid white;
    border-radius: 50%;
    height: 12px;
    width: 12px;
}

.umap-circle-icon.umap-icon-active {
    opacity: 1.0 !important;
    height: 16px;
    width: 16px;
}

.umap-large-circle-icon {
    border: 2px solid white;
    background-color: white;
    border-radius: 50%;
    height: 36px;
    width: 36px;
    box-shadow: black 0px 0px 1px;
    display: flex;
    align-content: center;
}

.umap-large-circle-icon.umap-icon-active {
    opacity: 1.0 !important;
    box-shadow: var(--block-shadow);
}

.umap-ball-icon .icon-container {
    background-color: darkblue;
    background: radial-gradient(circle at 6px 38%, white -4px, darkblue 8px) repeat scroll 0 0 transparent;
    border-radius: 8px 8px 8px 8px;
    box-shadow: 1px 21px 6px -3px black;
    height: 16px;
    opacity: 0.9;
    text-align: center;
    width: 16px;
}

.umap-ball-icon.umap-icon-active .icon-container {
    border-radius: 10px 10px 10px 10px;
    box-shadow: 1px 23px 7px -1px black;
    margin-inline-start: -2px;
    margin-top: -4px;
    height: 20px;
    opacity: 1.0 !important;
    width: 20px;
}

.umap-ball-icon .icon-arrow {
    background-color: black;
    height: 16px;
    inset-inline-start: 7px;
    opacity: 0.9;
    position: relative;
    top: -1px;
    width: 2px;
}

.umap-icon-active {
    opacity: 1.0 !important;
}

.umap-edit-enabled .readonly {
    cursor: not-allowed;
}

.umap-raw-icon {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    overflow: hidden;
}

.umap-raw-icon img {
    object-fit: contain;
}

.umap-raw-icon.umap-icon-active {
    box-shadow: var(--block-shadow);
}

.umap-cluster-icon {
    border-radius: 50%;
    border: 4px solid white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: bold;
}

.leaflet-overlay-pane>svg {
    z-index: var(--zindex-orphan-marker);
}
/* ... */

